--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,16 @@
 # Binaries for programs and plugins
+.DS_Store
 *.exe
 *.exe~
 *.dll
+*.o
+*.a
 *.so
 *.dylib
 
-# Test binary, built with `go test -c`
+# Folders
+_obj
+_test
 *.test
 
 # Output of the go coverage tool, specifically when used with LiteIDE
@@ -13,3 +18,13 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+
+# cgo stuff
+*.cgo1.go
+*.cgo2.c
+_cgo_defun.c
+_cgo_gotypes.go
+_cgo_export.*
+_testmain.go
+.idea/
+*.iml
